﻿<h3>WokSense Module</h3>
<p class="Contributor">
	YounglingSlayer <br />
	<a href="mailto:levente.meszaros@stud.uni-corvinus.hu">levente.meszaros@stud.uni-corvinus.hu</a><br />
</p>
<hr/>
<div class="License">
	<h3>About WokSense Module</h3>
	<p class="Owner">
		<b>Version 0.1.0</b><br /><br />
	</p>
	<p>Changes:</p>
	
	<h4>New</h4>
	<ul>
			<li>Made the module read the db</li>
			<li>ugly interface added</li>
	</ul>
	<h4>Removed</h4>
	<ul>
			<li>All of my energy for the week</li>
			<li>My will to live</li>
			<li>A lot of my free time</li>
	</ul>
	
</div>