@@ -26,6 +26,11 @@ namespace DNN.WokPickerDNN.YounglingSlayer.WokPicker.Controllers
         public ActionResult Index()
         {
             var settings = this.ActiveModule.ModuleSettings;
+
+            if(settings.Count == 0)
+            {
+                return View("NoSettings");
+            }
             var items = HotCakesManager.Instance.ReadHotCakes();
             var bvin1 = settings.GetValue<string>("DNN.YounglingSlayer.WokPicker_Bvin1").ToLower();
             /*
