@@ -1,6 +1,6 @@
 <dotnetnuke type="Package" version="5.0">
   <packages>
-    <package name="DNN.YounglingSlayer.WokPicker" type="Module" version="00.01.00">
+    <package name="DNN.YounglingSlayer.WokPicker" type="Module" version="00.01.01">
       <friendlyName>DNN.YounglingSlayer.WokPicker</friendlyName>
       <description>DNN.YounglingSlayer.WokPicker</description>
       <iconFile>~/Icons/Sigma/Software_32X32_Standard.png</iconFile>
@@ -22,12 +22,12 @@
             <script type="Install">
               <path>Providers\DataProviders\SqlDataProvider</path>
               <name>00.01.00.SqlDataProvider</name>
-              <version>00.01.00</version>
+              <version>00.01.01</version>
             </script>
             <script type="UnInstall">
               <path>Providers\DataProviders\SqlDataProvider</path>
               <name>Uninstall.SqlDataProvider</name>
-              <version>00.01.00</version>
+              <version>00.01.01</version>
             </script>
           </scripts>
         </component>
