@@ -1,0 +1,12 @@
+﻿@inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<IEnumerable<DNN.WokPickerDNN.YounglingSlayer.WokPicker.Models.HotCakes>>
+
+@using System.Text.RegularExpressions
+@using DotNetNuke.Web.Mvc.Helpers
+@using System.Linq
+@using Dnn.Modules.Console
+
+
+
+<div id="Items-@Dnn.ModuleContext.ModuleId">
+    <h1>A modul használatához helyesen kell kitölteni a beállításokat!</h1>
+</div>
